--- a/web/themes/custom/customer/assets/css/fields/field-picture.css
+++ b/web/themes/custom/customer/assets/css/fields/field-picture.css
@@ -9,4 +9,9 @@
 .home .layout .picture-header .layout-picture .field-picture{
     margin:0 -30%;
 }
+.project .layout .picture-header .layout-picture .field-picture{
+    margin:0 -30%;
+}
+
+
 }
