--- a/web/themes/custom/customer/assets/css/fields/field-title-2.css
+++ b/web/themes/custom/customer/assets/css/fields/field-title-2.css
@@ -3,20 +3,17 @@
     font-size: 2.5rem;
     margin-bottom: 0.5em;
     color:rgb(250, 74, 93);
-}
-
-.layout-title .field-title-2 {
-           
-}
-.layout-pasion .field-title-2{
     
 }
+
+
 @media screen and (min-width: 640px){
 .field-title-2 {
     font-family: 'Dancing Script', cursive;
-    font-size: 2.5rem;
+    font-size: 3rem;
     margin-bottom: 0.5em;
     color:rgb(250, 74, 93);
+    text-align: center;
 }
 
 .layout-title .field-title-2 {
