--- a/web/themes/custom/customer/assets/css/fields/field-gallery.css
+++ b/web/themes/custom/customer/assets/css/fields/field-gallery.css
@@ -1,14 +1,24 @@
+.field-gallery li{
+    list-style: none;
+    margin-bottom: 2em;
+}
+
+
+
+
+
+/* tablette et desktop */
+@media screen and (min-width: 640px){
 .field-gallery {
     padding:2em;
     border-bottom: 1px solid grey;    
 }
-
 .field-gallery li{
     list-style: none;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
 }
-
 .field-gallery li img{
     display:block;    
 }
 
+}
