--- a/web/themes/custom/customer/assets/css/fields/field-project-types.css
+++ b/web/themes/custom/customer/assets/css/fields/field-project-types.css
@@ -12,5 +12,12 @@
 /* tablette-desktop*/
 @media screen and (min-width: 640px){
 /* savoir */
+.layout-project-types {
+    list-style: none;
+    text-transform: uppercase;
+    font-size:1rem;
+    padding: 0.5em 0;
+    border-bottom: 1px solid rgb(250, 74, 93);
+}
 
 }
