--- a/web/themes/custom/customer/assets/css/fields/field-title-1.css
+++ b/web/themes/custom/customer/assets/css/fields/field-title-1.css
@@ -1,19 +1,18 @@
 .field-title-1 {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Oswald', sans-serif;
     font-weight: 700;
     font-size: 2.5rem;
     color:rgb(250, 74, 93);   
     }
 @media screen and (min-width: 640px){
 .field-title-1 {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Oswald', sans-serif;
     font-weight: 700;
-    font-size: 2.5rem;
+    font-size: 3rem;
     color:rgb(250, 74, 93);    
    }
-.layout-content .field-title1{
-    font-family: 'Dancing Script', cursive;
-}
+
+
 }
 
 
