--- a/web/themes/custom/customer/assets/css/layouts/layout-about.css
+++ b/web/themes/custom/customer/assets/css/layouts/layout-about.css
@@ -12,6 +12,7 @@
 /* passion */
 .about .layout-pasion{
     background-color: rgb(211, 211, 211);
+    padding: -5em;
    
 }
 .about .layout-pasion h3{
@@ -71,6 +72,7 @@
     width: 500px;
     z-index: 1;   
 }
+
 /* savoir */
 .about .layout-content{
     display:flex;
