--- a/web/themes/custom/customer/assets/css/structure.css
+++ b/web/themes/custom/customer/assets/css/structure.css
@@ -24,7 +24,7 @@ body{
 img {
     max-width: 100%;
     height: auto;
-    filter: grayscale(1);
+    /*filter: grayscale(1);*/
 }
 p {
     line-height: 1.4em;
