--- a/web/themes/custom/customer/assets/css/fields/field-title-2.css
+++ b/web/themes/custom/customer/assets/css/fields/field-title-2.css
@@ -1,23 +1,18 @@
 .field-title-2 {
-    font-family: 'Dancing Script', cursive;
-    font-size: 2.5rem;
-    margin-bottom: 0.5em;
-    color:rgb(250, 74, 93);
-    
-}
-
-
-@media screen and (min-width: 640px){
-.field-title-2 {
-    font-family: 'Dancing Script', cursive;
-    font-size: 3rem;
-    margin-bottom: 0.5em;
-    color:rgb(250, 74, 93);
-    text-align: center;
+  font-family: 'Dancing Script', cursive;
+  font-size: 2.5rem;
+  margin-bottom: 0.5em;
+  color: rgb(250, 74, 93);
+  text-align: center;
 }
 
 .layout-title .field-title-2 {
-    text-align: center; 
-    padding-top: 0.5em;   
+  margin-top: 2em;
 }
+
+/* tablette et desktop */
+@media screen and (min-width: 641px) {
+  .field-title-2 {
+    font-size: 3rem;
+  }
 }
