--- a/web/themes/custom/customer/templates/fields/field--field-project-types.html.twig
+++ b/web/themes/custom/customer/templates/fields/field--field-project-types.html.twig
@@ -1,5 +1,5 @@
-<div class="field-project-types">
-        {% for item in items %}    
-            <li>{{ item.content }}</li>    
+<ul class="field-project-types">
+        {% for item in items %}
+            <li>{{ item.content }}</li>
         {% endfor %}
-</div>
+</ul>
