--- a/web/themes/custom/customer/assets/css/blocks/block-branding.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-branding.css
@@ -1,60 +1,25 @@
-#block-branding{
-    background-color: rgb(253, 253, 253);
-    display:flex;
-    align-items: center;       
-}
-#block-banding a{
-    color: black;
-    text-decoration: none;
-    font-family: 'Lato', sans-serif;
+#block-branding {
+  background-color: white;
+  display: flex;
+  align-items: center;
 }
 
-#block-branding a img{
-height:3em;
-display:block;
-width:auto;
-margin-right: 2em; 
+#block-banding a {
+  color: black;
+  text-decoration: none;
+}
+
+#block-branding a img {
+  height: 3em;
+  display: block;
+  width: auto;
+  margin-right: 2em;
 }
 
 /* tablette */
-@media screen and (min-width: 640px) and (max-width: 1200px){
-#block-branding{
-    background-color: rgb(255, 255, 255);
-    display:flex;
-    align-items: center;   
+@media screen and (min-width: 641px) and (max-width: 1199px) {
 }
-#block-banding a{
-    color: black;
-    text-decoration: none;
-    font-family: 'Lato', sans-serif;
-}
-#block-branding a img{
-height:3em;
-display:block;
-width:auto;
-margin-right: 2em; 
-}
-}
-
 
 /* destop */
-@media screen and (min-width: 1200px){
-#block-branding{
-    background-color: rgb(255, 255, 255);
-    display:flex;
-    align-items: center;       
-}
-#block-banding a{
-    color: black;
-    text-decoration: none;
-    font-family: 'Lato', sans-serif;
-}
-
-#block-branding a img{
-height:3em;
-display:block;
-width:auto;
-margin-right: 2em; 
-}
-
+@media screen and (min-width: 1200px) {
 }
