--- a/web/themes/custom/customer/assets/css/blocks/block-contact.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-contact.css
@@ -1,22 +1,40 @@
-/* mobile */
-#block-contact{
-    background-image: url(../../images/fond-contact.jpg);
-     padding: 2.5em;
-     margin-bottom: 3em;
-}    
-
-
-/* tablette */
-@media screen and (min-width: 640px) and (max-width: 1200px) {
-#block-contact{
-    margin-bottom: 3em;
-   
-}   
+#block-contact {
+  background-image: url("../../images/fond-contact.jpg");
+  padding: 2.5em;
+  margin-bottom: 3em;
 }
 
+/* contact */
+#block-contact .field-body {
+  background-color: rgb(211, 211, 211);
+  padding: 2em;
+
+}
+
+#block-contact .field-body h4 {
+  margin-bottom: 1em;
+  font-size: 1.5rem;
+}
+
+#block-contact .field-body p {
+  margin-bottom: 2em;
+
+}
+
+#block-contact .field-body a {
+  color: rgb(250, 74, 93);
+  text-decoration: none;
+  font-size: 1.4rem;
+}
+
+
 /* desktop */
-@media screen and (min-width: 1200px) {
- #block-contact{
-     margin-bottom: 3em;
- }  
+@media screen and (min-width: 641px) {
+
+  #block-contact .field-body {
+    padding: 5em 3em;
+    width: 40%;
+    margin-left: auto;
+    margin-right: 4em;
+  }
 }
