--- a/web/themes/custom/customer/assets/css/fields/field-picture.css
+++ b/web/themes/custom/customer/assets/css/fields/field-picture.css
@@ -1,17 +1,27 @@
+.home .layout .picture-header .layout-picture .field-picture img,
+.about .layout .picture-header .layout-picture .field-picture img,
+.project .layout .picture-header .layout-picture .field-picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
 
-
+/* mobile */
+@media screen and (max-width: 640px) {
+  .home .layout .picture-header .layout-picture .field-picture,
+  .about .layout .picture-header .layout-picture .field-picture,
+  .project .layout .picture-header .layout-picture .field-picture {
+    height: 30vh;
+  }
+}
 
 /* tablette et desktop */
-@media screen and (min-width: 640px){
-.about .layout .picture-header .layout-picture .field-picture{
-    margin:0 -30%;
-}
-.home .layout .picture-header .layout-picture .field-picture{
-    margin:0 -30%;
-}
-.project .layout .picture-header .layout-picture .field-picture{
-    margin:0 -30%;
-}
-
-
+@media screen and (min-width: 641px) {
+  .home .layout .picture-header .layout-picture .field-picture,
+  .about .layout .picture-header .layout-picture .field-picture,
+  .project .layout .picture-header .layout-picture .field-picture {
+    margin: 0 -30%;
+    height: 80vh;
+  }
 }
