--- a/web/themes/custom/customer/assets/css/fields/field-project-types.css
+++ b/web/themes/custom/customer/assets/css/fields/field-project-types.css
@@ -1,23 +1,23 @@
+.field-project-types li {
+  list-style: none;
+  text-transform: uppercase;
+  font-size: .9rem;
+  padding: 1em 0;
+  border-bottom: 1px solid rgb(250, 74, 93);
+}
+
+.field-project-types li:last-child {
+  border-bottom: none;
+}
+
 /* mobile */
-/* savoir */
-.layout-project-types {
-    list-style: none;
-    text-transform: uppercase;
-    font-size:1rem;
-    padding: 0.5em 0;
-    border-bottom: 1px solid rgb(250, 74, 93);
+@media screen and (max-width: 640px) {
+  .field-project-types {
+    margin-top: 2em;
+  }
 }
 
-
-/* tablette-desktop*/
-@media screen and (min-width: 640px){
-/* savoir */
-.layout-project-types {
-    list-style: none;
-    text-transform: uppercase;
-    font-size:1rem;
-    padding: 0.5em 0;
-    border-bottom: 1px solid rgb(250, 74, 93);
-}
+/* desktop */
+@media screen and (min-width: 641px) {
 
 }
