--- a/web/themes/custom/customer/assets/css/global.css
+++ b/web/themes/custom/customer/assets/css/global.css
@@ -4,10 +4,8 @@
 
 /* field */
 @import "fields/field-body.css";
-@import "fields/field-body2.css";
-@import "fields/field-field-body.css";
-@import "fields/field-title-2.css";
 @import "fields/field-title-1.css";
+@import "fields/field-title-2.css";
 @import "fields/field-client.css";
 @import "fields/field-gallery.css";
 @import "fields/field-date.css";
@@ -20,12 +18,12 @@
 /* blocks */
 @import "blocks/block-branding.css";
 @import "blocks/block-contact.css";
-@import "blocks/block-footer.css";
-@import "blocks/block-tabs.css";
+@import "blocks/block-copyright.css";
 @import "blocks/block-socialmedia.css";
-
+@import "blocks/block-tabs.css";
 
 /* layout */
+@import "layouts/layout.css";
 @import "layouts/layout-project.css";
 @import "layouts/layout-about.css";
 @import "layouts/layout-homepage.css";
