--- a/web/themes/custom/customer/templates/fields/field--field-field-body.html.twig
+++ b/web/themes/custom/customer/templates/fields/field--field-field-body.html.twig
@@ -1,3 +1,3 @@
 {% for item in items %}
-    <div class="field-field-body">{{ item.content }}</div>
+    <div class="field-body">{{ item.content }}</div>
 {% endfor %}
