--- a/web/themes/custom/customer/assets/css/fields/field-title-1.css
+++ b/web/themes/custom/customer/assets/css/fields/field-title-1.css
@@ -1,8 +1,9 @@
 .field-title-1 {
   font-family: 'Oswald', sans-serif;
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: 3rem;
   color: rgb(250, 74, 93);
+  line-height: 1em;
 }
 
 /* tablette et desktop */
