--- a/web/themes/custom/customer/assets/css/blocks/block-branding.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-branding.css
@@ -4,9 +4,10 @@
   align-items: center;
 }
 
-#block-banding a {
+#block-branding a {
   color: black;
   text-decoration: none;
+  
 }
 
 #block-branding a img {
@@ -18,6 +19,10 @@
 
 /* tablette */
 @media screen and (min-width: 641px) and (max-width: 1199px) {
+  #block-branding a {
+    color: black;
+    text-decoration: none;
+  }
 }
 
 /* destop */
