--- a/web/themes/custom/customer/assets/css/fields/field-body.css
+++ b/web/themes/custom/customer/assets/css/fields/field-body.css
@@ -9,13 +9,17 @@
 }
 
 .layout-header p {
+  font-size: 1.3rem;
   margin-bottom: 1em;
+}
+.layout-content p{
+  margin-bottom: 1.5em;
 }
 
 .layout-content .field-body ul li {
   list-style: none;
   text-transform: uppercase;
-  font-size: .9rem;
+  font-size: 1rem;
   padding: 1em 0;
   border-bottom: 1px solid rgb(250, 74, 93);
 }
@@ -26,5 +30,12 @@
 
 /* desktop */
 @media screen and (min-width: 640px) {
+  .layout-content .field-body ul li{
+    font-size: .9rem;
+  }
+  .layout-header p {
+    font-size: 1rem;
+    
+  }
 
 }
