--- a/web/themes/custom/customer/assets/css/fields/field-project-types.css
+++ b/web/themes/custom/customer/assets/css/fields/field-project-types.css
@@ -13,7 +13,11 @@
 /* mobile */
 @media screen and (max-width: 640px) {
   .field-project-types {
-    margin-top: 2em;
+    margin-top: 2em;    
+  }
+  .field-project-types li{
+    font-size: 1rem;
+
   }
 }
 
