--- a/web/themes/custom/customer/assets/css/fields/field-subtitle.css
+++ b/web/themes/custom/customer/assets/css/fields/field-subtitle.css
@@ -1,8 +1,15 @@
 .field-subtitle {
   font-weight: 700;
-  font-size: 1.75rem;
+  font-size: 1.60rem;
   border-bottom: 1px solid black;
   border-top: 1px solid black;
   padding: 0.5em 0;
   margin: 0.5em 0;
+}
+/* tablette et desktop */
+@media screen and (min-width: 641px){
+  .field-subtitle{
+    font-size: 1.75rem;
+
+  }
 }
