Fixing navigation + Field projects types

--- a/web/themes/custom/customer/assets/css/blocks/block-mainmenu.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-mainmenu.css
@@ -1,27 +1,34 @@
-.region-header .region{
-    display: flex;
-    align-items: center;
+.region-header .region {
+  display: flex;
+  align-items: center;
 }
-#block-mainmenu{
-    flex:1;            
+
+#block-mainmenu {
+  flex: 1;
 }
-#block-mainmenu ul{
-    display:flex;                 
+
+#block-mainmenu ul {
+  display: flex;
+  justify-content: flex-end;
 }
+
 #block-mainmenu ul li {
-    list-style: none;
-    padding: 0.5em; 
-            
+  list-style: none;
+  padding: 0.5em;
+
 }
-#block-mainmenu ul li a{
-    text-decoration: none;
-    color:black; 
+
+#block-mainmenu ul li a {
+  text-decoration: none;
+  color: black;
 }
-#block-mainmenu ul li a:active{
-    text-decoration: none;
-    color: rgb(250, 74, 93); 
+
+#block-mainmenu ul li a:active {
+  text-decoration: none;
+  color: rgb(250, 74, 93);
 }
-#block-mainmenu ul li a:visited{
-    text-decoration: none;
-    color: rgb(250, 74, 93); 
+
+#block-mainmenu ul li a:visited {
+  text-decoration: none;
+  color: rgb(250, 74, 93);
 }
