--- a/web/themes/custom/customer/assets/css/blocks/block-branding.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-branding.css
@@ -7,7 +7,7 @@
 #block-branding a {
   color: black;
   text-decoration: none;
-  
+
 }
 
 #block-branding a img {
@@ -15,6 +15,7 @@
   display: block;
   width: auto;
   margin-right: 2em;
+  margin: .5em;
 }
 
 /* tablette */
