--- a/web/themes/custom/customer/assets/css/global.css
+++ b/web/themes/custom/customer/assets/css/global.css
@@ -31,5 +31,6 @@
 @import "layouts/layout-project.css";
 @import "layouts/layout-about.css";
 @import "layouts/layout-homepage.css";
+@import "layouts/layout-contact.css";
 
 
