--- a/web/themes/custom/customer/assets/css/blocks/block-mainpagecontent.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-mainpagecontent.css
@@ -2,11 +2,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    
-}
-#block-mainpagecontent .item-list{
-    
+    justify-content: center;    
 }
 #block-mainpagecontent .project-teaser .layout{
     position:relative;
@@ -14,7 +10,7 @@
 #block-mainpagecontent li{
     list-style: none;    
 }
-#block-mainpagecontent img{
+.path-mes-réalisations #block-mainpagecontent img{
     flex:1 1 auto;
     width:auto;
     height:auto;
@@ -35,8 +31,7 @@
 .project-teaser .layout{
     display:grid;
     grid-template-columns: 1;
-    grid-template-rows: 1;
-    
+    grid-template-rows: 1;    
 }
 .project-teaser .layout-picture,.layout-content{
     grid-column: 1;
