--- a/web/themes/custom/customer/assets/css/blocks/block-socialmedia.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-socialmedia.css
@@ -3,9 +3,12 @@
   list-style: none;
   justify-content: center;
 }
-
 #block-socialmedia .field-body ul li {
   margin: 1em;
   flex: 1;
   text-align: center;
+}
+#block-socialmedia .field-body ul li img{
+  width: 2.2em;
+  height:auto;
 }
