--- a/web/themes/custom/customer/assets/css/blocks/block-mainpagecontent.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-mainpagecontent.css
@@ -1,45 +1,58 @@
-#block-mainpagecontent .item-list ul{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;    
+.list-projects {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-#block-mainpagecontent .project-teaser .layout{
-    position:relative;
+
+.list-projects li {
+  list-style: none;
+  width: 50%;
+  padding: 1em;
 }
-#block-mainpagecontent li{
-    list-style: none;    
+
+@media screen and (max-width: 1199px) {
+  .region-list .list-projects li {
+    width: 50%;
+  }
 }
-.path-mes-réalisations #block-mainpagecontent img{
-    flex:1 1 auto;
-    width:auto;
-    height:auto;
-    max-width:400px;
-    max-height: 500px;
-    margin:5px;
-    object-fit: cover;    
+
+@media screen and (min-width: 1200px) {
+  .region-list .list-projects li {
+    width: 25%;
+  }
 }
-.project-teaser .layout-content h1{
-    color:white;
-    font-size: 1.5rem;
-    margin-bottom: 0.5em;
+
+.project-teaser .layout {
+  position: relative;
 }
-.project-teaser .layout-content a{
-    color:white;
-    text-decoration: none;
+
+.project-teaser .layout-content h1 {
+  color: white;
+  font-size: 1.5rem;
+  margin-bottom: 0.5em;
 }
-.project-teaser .layout{
-    display:grid;
-    grid-template-columns: 1;
-    grid-template-rows: 1;    
+
+.project-teaser .layout-content a {
+  color: white;
+  text-decoration: none;
 }
-.project-teaser .layout-picture,.layout-content{
-    grid-column: 1;
-    grid-row: 1;
+
+.project-teaser .layout {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
 }
-.project-teaser .layout-content{
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding:1em;
+
+.project-teaser .layout-picture,
+.project-teaser .layout-content {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.project-teaser .layout-content {
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 1em;
 }
