--- a/web/themes/custom/customer/assets/css/layouts/layout-contact.css
+++ b/web/themes/custom/customer/assets/css/layouts/layout-contact.css
@@ -1,70 +1,129 @@
-.page-contact{
-    display:flex;
+@media screen and (min-width: 1200px) {
+  .page-contact {
+    display: flex;
+  }
+  .left {
+    width: 60%;
+  }
+  .right {
+    width: 40%;
+  }
 }
+
+/* *************************************** LEFT */
+
 .left {
-    display:grid;
-    grid-template-columns: 1;
-    grid-template-rows: 1;    
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
 }
-.left .layout-picture,.layout-content{
-    grid-column: 1;
-    grid-row: 1;
+
+.left .layout-picture,
+.left .layout-content {
+  grid-column: 1;
+  grid-row: 1;
 }
-.left .layout-picture img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: 50% 50%;
+
+.left .layout-content {
+  align-items: center;
+  padding: 2.5em;
 }
-.left .layout-content{
-    align-items: center;
-    margin:2em;
-    margin-top: 5em;
+
+.left .layout-picture .field-picture {
+  height: 100%;
 }
-.left .layout-content h4{
-    font-family: 'Oswald', sans-serif;
-    font-size: 1.5rem;
+
+@media screen and (min-width: 1200px) {
+  .left .layout-content {
+    padding: 10em;
+  }
+  .left .layout-picture .field-picture {
+    margin-left: -30%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 }
-/* ***** right  *** */
-.right {
-    flex:1;
+
+.left .layout-content h4 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.5rem;
 }
-.right .layout-header{
-    flex: 1;
-    height: fit-content;
-    margin-top: 10em;
-    z-index: 1;   
-    padding: 2.5em;
-    margin: 0;
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15);
-    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15);
-    background-color: white;
-  
+
+/* *************************************** RIGHT */
+.right .layout-header {
+  height: fit-content;
+  z-index: 1;
+  padding: 2.5em;
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+  background-color: white;
+  margin: 0;
 }
-.right .layout-header .field-body p{
-    margin-bottom: 0.5em;
+
+.right .layout-header .field-body p {
+  margin-bottom: 0.5em;
 }
+
+@media screen and (min-width: 1200px) {
+  .right .layout-header {
+    margin-top: 15em;
+    margin-left: -5em;
+  }
+
+}
+
 /* formulaire */
-.right .layout-form{
-    margin:2em;
-    margin-top: 10em;
+.right .layout-form {
+  margin: 2em;
 }
-.right .layout-form label{
-    text-transform: uppercase;
-   
+
+@media screen and (min-width: 1200px) {
+  .right .layout-form {
+    margin-top: 5em;
+    margin-bottom: 5em;
+  }
+
 }
-.right .layout-form input,textarea{
-    background-color: rgb(250, 74, 93, 0.5);
-    border: none;
-    border-radius: 15px;
-    height: 30px;
-    margin-bottom: 0.7em;
+
+form label {
+  text-transform: uppercase;
+  display: block;
+  margin-bottom: .5em;
 }
-#edit-actions-submit{
-    background-color: white;
-    text-align: right;
-    color:rgb(250, 74, 93);
+
+form input[type="text"],
+form input[type="email"] {
+  background-color: rgba(250, 74, 93, 0.25);
+  border: none;
+  border-radius: 15px;
+  margin-bottom: 1.5em;
+  padding: .5em;
+  font-size: 1rem;
+  width: 100%;
+}
+
+form textarea {
+  background-color: rgba(250, 74, 93, 0.25);
+  border: none;
+  border-radius: 15px;
+  height: 15vh;
+  padding: .5em;
+  margin-bottom: 1.5em;
+  font-family: 'Lato', sans-serif;
+  width: 100%;
+}
+
+form input[type="submit"] {
+  background-color: white;
+  text-align: right;
+  color: rgb(250, 74, 93);
+  font-family: 'Lato', sans-serif;
+  padding: .5em 1em;
+  border-radius: 15px;
+  margin-bottom: 1.5em;
+  text-transform: uppercase;
 }
 
 
