--- a/web/themes/custom/customer/assets/css/blocks/block-contact.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-contact.css
@@ -6,7 +6,7 @@
 
 /* contact */
 #block-contact .field-body {
-  background-color: rgb(211, 211, 211);
+  background-color: white;
   padding: 2em;
 
 }
