--- a/web/themes/custom/customer/assets/css/blocks/block-mainpagecontent.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-mainpagecontent.css
@@ -1,58 +1,58 @@
 .list-projects {
-  display: flex;
+  display:flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
 }
-
 .list-projects li {
-  list-style: none;
-  width: 50%;
+  list-style: none;  
   padding: 1em;
 }
-
-@media screen and (max-width: 1199px) {
-  .region-list .list-projects li {
-    width: 50%;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .region-list .list-projects li {
-    width: 25%;
-  }
-}
-
 .project-teaser .layout {
   position: relative;
 }
-
 .project-teaser .layout-content h1 {
   color: white;
   font-size: 1.5rem;
   margin-bottom: 0.5em;
+  padding-bottom: 0.5em;;
+  border-bottom: 2px solid ;
 }
-
 .project-teaser .layout-content a {
   color: white;
   text-decoration: none;
 }
-
 .project-teaser .layout {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
 }
-
 .project-teaser .layout-picture,
 .project-teaser .layout-content {
   grid-column: 1;
   grid-row: 1;
 }
-
-.project-teaser .layout-content {
+.project-teaser .layout-content { 
+  opacity:0; 
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
   padding: 1em;
 }
+.project-teaser .layout .layout-content:hover{
+  opacity:1;
+  background-color:  rgba(250, 74, 93,0.3);  
+}
+
+@media screen and (min-width: 768px) {
+  .list-projects li {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .region-list #block-views-block-projects-block-others .list-projects li {
+    width: 25%;
+  }
+}
+
