--- a/web/themes/custom/customer/assets/css/layouts/layout-about.css
+++ b/web/themes/custom/customer/assets/css/layouts/layout-about.css
@@ -15,13 +15,12 @@
 }
 
 /* tablette et desktop */
-@media screen and (min-width: 641px) {
+@media screen and (max-width: 641px) {
   .layout-passion {
     padding: 4em;
   }
   /* content */
   .about .layout .layout-content {
-    padding: 2em;
     margin-bottom: 2em;
   }
 }
