--- a/web/themes/custom/customer/assets/css/layouts/layout-contact.css
+++ b/web/themes/custom/customer/assets/css/layouts/layout-contact.css
@@ -1,3 +1,10 @@
+#block-pagetitle h1{
+  color: rgb(250, 74, 93);
+  font-family: 'Dancing Script', cursive;
+  margin-bottom: 1em;
+  margin-top:2em;
+  text-align: center;
+}
 @media screen and (min-width: 1200px) {
   .page-contact {
     display: flex;
@@ -11,22 +18,25 @@
 }
 
 /* *************************************** LEFT */
-
 .left {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
 }
-
 .left .layout-picture,
 .left .layout-content {
   grid-column: 1;
   grid-row: 1;
 }
-
 .left .layout-content {
   align-items: center;
   padding: 2.5em;
+}
+@media screen and (min-width: 768px){
+  .left .layout-content {    
+    align-items: center;
+    padding: 5em;
+  } 
 }
 
 .left .layout-picture .field-picture {
@@ -44,13 +54,22 @@
     background-repeat: no-repeat;
   }
 }
-
-.left .layout-content h4 {
+.left .layout-content h3 {
   font-family: 'Oswald', sans-serif;
   font-size: 1.5rem;
+  }
+.left .layout-content h4 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.2rem;
+  margin:1em 0;
 }
 
 /* *************************************** RIGHT */
+@media screen and (max-width: 360px){
+  .right .layout-header{
+    padding: 2em;
+  }
+}
 .right .layout-header {
   height: fit-content;
   z-index: 1;
@@ -61,30 +80,22 @@
   background-color: white;
   margin: 0;
 }
-
 .right .layout-header .field-body p {
   margin-bottom: 0.5em;
 }
-
+/* formulaire */
+.right .layout-form {
+  margin: 2em;
+}
 @media screen and (min-width: 1200px) {
   .right .layout-header {
     margin-top: 15em;
     margin-left: -5em;
   }
-
-}
-
-/* formulaire */
-.right .layout-form {
-  margin: 2em;
-}
-
-@media screen and (min-width: 1200px) {
   .right .layout-form {
     margin-top: 5em;
     margin-bottom: 5em;
   }
-
 }
 
 form label {
