--- a/web/themes/custom/customer/templates/system/html.html.twig
+++ b/web/themes/custom/customer/templates/system/html.html.twig
@@ -71,7 +71,7 @@
 </a>
 {{ page }}
 {{ page_bottom }}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <js-bottom-placeholder token="{{ placeholder_token }}">
 </body>
 </html>
