design menu mobile

--- a/web/themes/custom/customer/assets/css/blocks/block-mainmenu.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-mainmenu.css
@@ -1,5 +1,5 @@
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1200px){
   #icon-menu{
     display:none;
   }
@@ -31,10 +31,11 @@
 }
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 1199px){
 #icon-menu{
-  background-color: royalblue;
   display:flex;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   justify-content: center;
   width:5em;
@@ -44,12 +45,73 @@
   z-index:2000;
   cursor: pointer;
 }
-#block-mainmenu{
-  display:none;
-  background-color: aqua;    
-  }
-#block-mainmenu.menumobile {
-  display:block;   
-  
+#icon-menu span{
+  height:2px;
+  width:35px;
+  border-radius: 15px;
+  background-color:rgb(250, 74, 93);
+  margin:.3em;
 }
+#icon-menu.close span{
+  height:2px;
+  width:35px;
+  border-radius: 15px;
+  background-color:white;
+  margin:.3em;
+}
+#icon-menu span:nth-child(1) {
+  top: 30%;
+}
+#icon-menu span:nth-child(2) {
+  top: 50%;
+}
+#icon-menu span:nth-child(3) {
+  top: 70%;
+}
+#icon-menu.close span:nth-child(1) {
+  transform: rotate(45deg);
+  top: 50%;
+}
+#icon-menu.close span:nth-child(2) {
+  opacity: 0;
+  top: 50%;
+}
+#icon-menu.close span:nth-child(3) {
+  transform: rotate(-45deg);
+  top: 50%;
+}
+#block-mainmenu{
+  right:-50vw; 
+  display:flex; 
+  z-index: 1500;
+  background-color: rgb(250, 74, 93);
+  padding:2em;
+  position:fixed;
+  width:50vw;
+  height:100vh;
+  top:0; 
+  -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;       
+}
+#block-mainmenu.menu-mobile {
+  right:0;  
+}
+#block-mainmenu > ul li{
+  list-style: none;
+  margin-bottom: 1.5em;
+}
+#block-mainmenu > ul li a{
+  text-decoration: none;
+  color: black;
+}
+#block-mainmenu > ul li a.is-active{
+  padding-bottom:0.5em;
+  color: white;
+  border-bottom: 2px solid white;
+
+}
+
 }
