--- a/web/themes/custom/customer/templates/page.html.twig
+++ b/web/themes/custom/customer/templates/page.html.twig
@@ -1,7 +1,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 <div class="wrapper">
 
-  <span id="icon-menu">///</span>
+  <div id="icon-menu"><span></span><span></span><span></span></div>
 
   {% if page.header %}
     <header class="region-header">
