--- a/web/themes/custom/customer/assets/css/global.css
+++ b/web/themes/custom/customer/assets/css/global.css
@@ -32,5 +32,6 @@
 @import "layouts/layout-about.css";
 @import "layouts/layout-homepage.css";
 @import "layouts/layout-contact.css";
+@import "layouts/layout-mentions.css";
 
 
