--- a/web/themes/custom/customer/assets/css/blocks/block-mainmenu.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-mainmenu.css
@@ -19,15 +19,28 @@
   padding: 0.5em;
 }
 #block-mainmenu > ul li a {
+  display:inline-block;
   text-decoration: none;
   color: black;
   margin:0 1em;
 }
-#block-mainmenu > ul li a.is-active {
-  text-decoration: none;
-  padding-bottom:0.5em;
-  color: rgb(250, 74, 93);
+#block-mainmenu > ul li a.is-active{
+  color:rgb(250, 74, 93);
   border-bottom: 2px solid rgb(250, 74, 93);
+  margin:0 1em;
+}
+ 
+#block-mainmenu ul li a::after{
+  content: '';
+  display: block;
+  width: 0;
+  border-bottom: 2px solid rgb(250, 74, 93);
+  transition: all .3s ease-in-out 0s;
+}
+#block-mainmenu ul li a:hover::after{
+  width: 100%;
+  transition: width .3s;
+  border-bottom:2px solid rgb(250, 74, 93);
 }
 }
 
@@ -115,6 +128,18 @@
   padding-bottom:0.5em;  
   color: white;
   border-bottom: 2px solid white;
+}
+#block-mainmenu ul li a::after{
+  content: '';
+  display: block;
+  width: 0;
+  border-bottom: 2px solid white;
+  transition: all .3s ease-in-out 0s;
+}
+#block-mainmenu ul li a:hover::after{
+  width: 100%;
+  transition: width .3s;
+  border-bottom:2px solid white;
 }
 
 }
