--- a/web/themes/custom/customer/templates/layout/layout-project-teaser.html.twig
+++ b/web/themes/custom/customer/templates/layout/layout-project-teaser.html.twig
@@ -2,7 +2,7 @@
   <article class="project-teaser">
 
     <div class="layout">
-      
+
       {% if content.picture %}
         <div class="layout-picture">
           {{ content.picture }}
@@ -13,7 +13,9 @@
         <div class="layout-content">
           {{ content.content }}
         </div>
-      {% endif %}      
+      {% endif %}
+
+      {{ content.link }}
 
     </div>
   </article>
