--- a/web/themes/custom/customer/assets/css/blocks/block-tabs.css
+++ b/web/themes/custom/customer/assets/css/blocks/block-tabs.css
@@ -1,5 +1,4 @@
 #block-tabs {
-  background-color: rgb(248, 66, 136);
   border-bottom: 1em black;
 }
 
@@ -12,15 +11,16 @@
 
 #block-tabs > ul li a {
   text-decoration: none;
+  color:black;
   display: block;
   padding: 0.5em;
-  background-color: beige;
+  background-color: rgba(250, 74, 93, 0.2);
   margin: 0.5em;
 
 }
 
 #block-tabs > ul li a.is-active {
-  color: black;
+  color: rgb(250, 74, 93);
   background-color: white;
 }
 
